--- a/resources/style.css
+++ b/resources/style.css
@@ -1,10 +1,13 @@
 body {
     background-image: url(images/starry-sky-by-paree.jpg);
+    
 }
 
 h1 {
     font-family: 'Faster One', cursive;
+    font-size: 38px;
     color: black;
+    text-align: center;
    
 }
 
@@ -19,6 +22,12 @@ h1 {
   padding: 20px;
   border-radius: 20px;
   box-shadow: 0px 0px 3px 6px darkgray;
+    
+}
+
+#innercalc {
+    width: 340px;
+    margin: auto;
 }
 
 
@@ -31,26 +40,42 @@ h1 {
     box-shadow: 0px 0px 1px black;
     text-align: right;
     font: 20px bold;
+    font-family: 'Nova Mono', monospace;
 }
 
-#keys {
+.keys {
     width: 70px;
     height: 50px;
     margin: 4px;
     box-shadow: 0px 0px 2px 1px black;
     border-radius: 3px;
     outline: none;
+    font: 20px bold;
+    font-family: 'Nova Mono', monospace;
 }
 
 #equals {
+    position: absolute;
     width: 70px;
-    height: 80px;
-    margin: -30px 4px 4px 88px;
+    height: 104px;
+    margin: -50px 4px 4px 8px;
     box-shadow: 0px 0px 2px 1px black;
     border-radius: 3px;
     outline: none;
+    font: 20px bold;
+    font-family: 'Nova Mono', monospace;
 }
 
+#zero {
+    width: 153px;
+    height: 50px;
+    margin: 4px;
+    box-shadow: 0px 0px 2px 1px black;
+    border-radius: 3px;
+    outline: none;
+    font: 20px bold;
+    font-family: 'Nova Mono', monospace;
+}
 
 
 /*lisa frank color palette from http://www.colourlovers.com/palette/340445/lisa_frank?c=1 */
@@ -72,9 +97,15 @@ h1 {
 }
 
 .footer {
-  width: 400px;
-  margin-top: 20%;
+  width: 350px;
+  margin-top: 10%;
   margin-left: auto;
   margin-right: auto;
-  color: lightgray;
+  background-color: #9C29DE;
+  border: 2px solid black;
+  padding: 15px;
+  border-radius: 20px;
+  color: darkgray;
+  text-align: center;
+    font-family: sans-serif;
 }
